--- a/style.css
+++ b/style.css
@@ -3,3 +3,108 @@
     margin: 0;
     padding: 0;
 }
+body{
+    font-family: 'Work Sans', sans-serif;
+    background-color: #ff900e4a;
+}
+a{
+    text-decoration: none;
+}
+.container{
+    width: 1200px;
+    margin: 0 auto;
+    position: relative;
+}
+/********************Navigation*************/
+.navigation{
+   display: flex;
+   justify-content: space-between;
+}
+.nav-title{
+    font-size: 30px;
+    font-weight: 700;
+    color: #131313;
+    text-align: center;
+    margin-top: 10px;
+}
+nav ul{
+    display: flex;
+}
+nav ul li{
+    list-style: none;
+    margin-right: 10px;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+nav ul li:last-child{
+    margin-right: 0px;
+    border: 1px solid;
+    border-color: #727272;
+}
+nav ul li a{
+    color: #424242;
+    font-size: 18px;
+    font-weight: 600px;
+}
+nav ul li:hover{
+    background-color: #FF900E;
+    transition: 1s;
+}
+nav ul li:hover a{
+    color: white;
+}
+/************Banner Part***************/
+.banner{
+    display: grid;
+    grid-template-rows: auto;
+}
+.banner-detile{
+    text-align: center;
+    padding-top: 100px;
+}
+.banner-title{
+    color: #131313;
+    font-size: 64px;
+    font-weight: 800;
+    padding-bottom: 30px;
+}
+.banner-info{
+    font-size: 16px;
+    font-weight: 400;
+    color: #727272;
+    padding: 0px 272px;
+}
+.btn-primary{
+    width: 180px;
+    height: 64px;
+    border: none;
+    border-radius: 6px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    font-size: 20px;
+    font-weight: 700;
+    background-color: #FF900E;
+}
+.banner-image img{
+    width: 100%;
+    height: 700px;
+}
+/**************Media Quary*************/
+@media only screen and (max-width:576px){
+    .navigation{
+        display: grid;
+        grid-template-rows: auto;
+        position: relative;
+    }
+    .nav-title{
+        position: absolute;
+        translate: 360px 0px;  
+    }
+    .nav-item ul li{
+        display: grid;
+        grid-template-rows: repeat(4, 1fr);
+        
+    }
+}
