--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body{
     font-family: 'Work Sans', sans-serif;
-    background-color: #ff900e4a;
+    background-color: #FF900E;
 }
 a{
     text-decoration: none;
@@ -44,7 +44,7 @@ nav ul li:last-child{
     border-color: #727272;
 }
 nav ul li a{
-    color: #424242;
+    color: #131313;
     font-size: 18px;
     font-weight: 600px;
 }
@@ -74,7 +74,7 @@ nav ul li:hover a{
 .banner-info{
     font-size: 16px;
     font-weight: 400;
-    color: #727272;
+    color: #131313;
     padding: 0px 272px;
 }
 .btn-primary{
@@ -188,11 +188,11 @@ nav ul li:hover a{
     background-color: #FF900E;
     border: none;
     border-radius: 6px;
-    width: 320px;
-    height: 180px;
+    width: 289px;
+    height: 150px;
     position: absolute;
-    bottom: 0;
-    left: 40%;
+    bottom: 5px;
+    left: 42%;
 }
 .btn-enjoy span{
     font-size: 60px;
@@ -218,33 +218,58 @@ nav ul li:hover a{
 .fact-animation{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    column-gap: 120px;
+    justify-items: center;
+    column-gap: 30px;
     padding-top: 70px;
 }
 .some-fact{
     position: relative;
     animation-name: some-fact;
-    animation-duration: 3s;  
+    animation-duration: 8s;  
     animation-fill-mode: forwards;
+    padding-left: 30px;
 }
 
 @keyframes some-fact {
-    from  {left:0px; top:0px;}
-    to  {left:400px; top:200px;}
+    0%  {top:0px; left:0px;}
+    50%  {top: 0px; left: 400px;}
+    100% {top: 0px; left: 0px;}
   }
 .animation{
     border: 1px solid #FF900E;
     text-align: center;
     padding: 18px;
+}
+.animation-1{
     position: relative;
-    animation-name: animation;
-    animation-duration: 3s;  
-    animation-fill-mode: forwards;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 18px;
+    position: relative;
+    animation-duration: 4s;
+    animation-name: animation-1;
+    animation-delay: 1s;
 }
-@keyframes animation {
-    from {top: 0px;}
-    to {top: -200px;}
+@keyframes animation-1 {
+    0%   {background-color:#FF900E; left:0px; top:0px;}
+    50%  {background-color:blue; left:0px; top:-200px;}
+    100% {background-color:#FF900E; left:0px; top:0px;}
+  }
+  .animation-2{
+    position: relative;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 45px;
+    position: relative;
+    animation-duration: 4s;
+    animation-name: animation-2;
+    animation-delay: 1s;
 }
+@keyframes animation-2 {
+    0%   {background-color:#FF900E; left:0px; top:0px;}
+    50%  {background-color:blue; left:0px; top:-200px;}
+    100% {background-color:#FF900E; left:0px; top:0px;}
+  }
 .animation img{
     width: 45px;
     height: 45px;
@@ -259,7 +284,68 @@ nav ul li:hover a{
     font-weight: 600;
     color: #727272;
 }
+/**************Our Sponspors Section***************/
+.sponspors-container{
+    background-color: #ffffff;
+    padding-top: 100px;
+}
+.sponspors-details{
+    text-align: center;
+}
+.sponspors-title{
+    font-size: 45px;
+    font-weight: bold;
+    color: #131313;
+}
+.sponspors-info{
+    font-size: 16px;
+    font-weight: normal;
+    color: #727272;
+    padding-top: 30px;
+    padding-bottom: 54px;
+}
+.sponspors-list{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    justify-items: center;
+    padding-bottom: 100px;
+    padding-top: 30px;
+}
+.sponspors-image img{
+    width: 165px;
+    height: 50px;
+    filter: grayscale(1);
+}
 
+/*****************Footer Part**************/
+.footer-container{
+    background-color: #727272;
+    border-top: 1px solid #727272;
+}
+.footer{
+    display: grid;
+    justify-content: center;
+    text-align: center;
+    padding: 50px 0px;
+}
+.footer-title{
+    color: #131313;
+    padding-bottom: 16px;
+}
+.footer-detile{
+    color: #131313;
+    padding-bottom: 16px;
+}
+.social ul{
+    display: flex;
+}
+.social ul li{
+    padding: 10px;
+}
+.social ul{
+    list-style: none;
+    justify-content: center;
+}
 /**************Media Quary*************/
 @media only screen and (max-width:576px){
     .navigation{
@@ -292,4 +378,112 @@ nav ul li:hover a{
         width: 750px;
         height: 750px;
     }
+    .love-container{
+        background-color: #727272;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .love-images img{
+        width: 100%;
+        height: 100%;
+    }
+    .love-info{
+        text-align: center;
+        padding: 0px 156px;
+    }
+    .love-title{
+        color: #ffffff;
+        border: 0;
+    }
+    .enjoy-detile{
+        color: #ffffff;
+    }
+    .love-discription{
+        color: #ffffff;
+    }
+    .love-detile{
+        padding: 0px 156px;
+    }
+    .some-fact{
+        text-align: center;
+        padding: 0px 156px;
+    }
+    .fact-animation {
+        display: flex;
+        flex-direction: column;
+        row-gap: 30px;
+        align-items: center;
+    }
+    .animation-1{
+        width: 700px;
+        height: 220px;
+        background-color: #727272;
+        color: #ffffff;
+        padding: 0;
+    }
+    .animation-1 img{
+        width: 110px;
+        height: 110px;
+        padding-top: 10px;
+    }
+    .animation-1 h1{
+        font-size: 50px;
+    }
+    .animation-2 img{
+        width: 110px;
+        height: 110px;
+        padding-top: 10px;
+    }
+    .animation-2 h1{
+        font-size: 50px;
+    }
+    .animation-2{
+        width: 700px;
+        height: 220px;
+        background-color: #727272;
+        color: #ffffff;
+        padding: 0;
+    }
+    .animation{
+        width: 700px;
+        height: 220px;
+        background-color: #727272;
+        padding: 0;
+    }
+    .animation img{
+        width: 110px;
+        height: 110px;
+        padding-top: 10px;
+    }
+    .animation p{
+        color: #ffffff;
+    }
+    .animation h1{
+        color: #ffffff;
+    }
+    @keyframes some-fact {
+        0%  {top:0px; left:0px;}
+      }
+      .fact-animation{
+        display: flex;
+        flex-direction: column;
+      }
+      @keyframes animation-1 {
+        0%   {background-color:#FF900E; left:0px; top:0px;}
+      }
+      @keyframes animation-2 {
+        0%   {background-color:#FF900E; left:0px; top:0px;}
+      }
+
+      .footer-container{
+        background-color: #727272;
+      }
+      .footer-detile{
+        color: #ffffff;
+      }
+      .footer-title{
+        color: #ffffff;
+      }
+    
 }
