--- a/style.css
+++ b/style.css
@@ -273,12 +273,40 @@ nav ul li:hover a{
     width: 45px;
     height: 45px;
 }
+.animation-1 img{
+    width: 45px;
+    height: 45px;
+}
+.animation-2 img{
+    width: 45px;
+    height: 45px;
+}
 .animation h1{
     font-size: 45px;
     font-weight: 700;
     color: #424242;
 }
+.animation-1 h1{
+    font-size: 45px;
+    font-weight: 700;
+    color: #424242;
+}
+.animation-2 h1{
+    font-size: 45px;
+    font-weight: 700;
+    color: #424242;
+}
 .animation p{
+    font-size: 20px;
+    font-weight: 600;
+    color: #727272;
+}
+.animation-1 p{
+    font-size: 20px;
+    font-weight: 600;
+    color: #727272;
+}
+.animation-2 p{
     font-size: 20px;
     font-weight: 600;
     color: #727272;
